welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (asmile  && bsmile  ){
		return true
	} if (!asmile && !bsmile) {
		return true
	} return false
}
